# specta-serde-bug

./: Cargo.toml  README.md
src/: main.rs
