[package]
name = "specta-bug-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
specta = { version = "2.0.0-rc.20", features = ["derive"] }
specta-typescript = "0.0.7"
thiserror = "2.0.3"
